# owlet-sock-monitor-go

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  owlet-monitor.service
owlet-monitor/: BUILD.bazel  main.go
tools/: BUILD.bazel  preset.bazelrc
