load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "owlet-monitor_lib",
    srcs = ["main.go"],
    importpath = "owlet_monitor_go/owlet-monitor",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)

go_binary(
    name = "owlet-monitor",
    embed = [":owlet-monitor_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "owlet-monitor-arm64",
    embed = [":owlet-monitor_lib"],
    visibility = ["//visibility:public"],
    goos = "linux",
    goarch = "arm64",
    static = "on",
    pure = "on",
)
